tests/snapshot/error/source_locations/expression/delete/error_delete_super_property.js
class B {}

class C extends B {
  deleteSuperProperty() {
    delete super.x;
  }
}

var x = new C();
x.deleteSuperProperty();